--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
         </button>
         <div class="sidebar-sticky">
             <div class="logo text-center my-4">
-                <img src="~/images/favicon-32x32.png" alt="Apptivate Logo" class="img-fluid" />
+                <img src="~/images/Apptivate_circle _logo.png" alt="Apptivate Logo" class="img-fluid" />
             </div>
             <ul class="nav flex-column">
                 <li class="nav-item">
@@ -120,6 +120,7 @@
 
                 <!-- Logout Button -->
                 <form asp-controller="Account" asp-action="Logout" method="post">
+
                     <button type="submit">
                         <img src="~/Svgs/logout.svg" alt="Logout Icon" class="icon" /><span>Logout</span>
                     </button>
