--- a/wwwroot/css/StudentDashboard.css
+++ b/wwwroot/css/StudentDashboard.css
@@ -5,10 +5,21 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: black;
     margin: 0;
     padding: 0;
     height: 100vh;
+    background-image: url('/Images/User_roles_background.png'); /* Replace with your actual image path */
+    background-size: contain;
+    background-position: center;
+    background-repeat: repeat;
+}
+
+.background {
+    background-image: url('/Images/User_roles_background.png'); /* Replace with your actual image path */
+    background-size: contain;
+    background-position: center;
+    background-repeat: repeat;
 }
 
 /* Parent Wrapper Container */
@@ -18,9 +29,11 @@ body {
     grid-template-rows: auto 1fr;
     grid-gap: 20px;
     padding: 20px;
-    background-color: #f7f7f7;
-    width: 100vw;
+    margin-left: 2vw;
+   
+    width: 90vw;
     height: 100vh;
+
 }
 
 /* Dashboard Container */
@@ -38,12 +51,12 @@ body {
 
 /* Recent Activity Section */
 .recent-activity-section {
-    width: 20vw; /* Controls the width of the recent-activity-section */
+    width: 15vw; /* Controls the width of the recent-activity-section */
     background-color: white;
     padding: 20px;
-    margin-left: 20px; /* Space between dashboard and recent activity */
+    margin-left: 2vw; /* Space between dashboard and recent activity */
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 }
 
 /* Profile Section */
